--- a/css/pip.css
+++ b/css/pip.css
@@ -223,6 +223,44 @@ button {
 
 /*=== SERVICES SECTION ===*/
 
+.service_header {
+	display: block;
+	/* flex-wrap: wrap;
+	width: 100%;
+	justify-content: center;
+	align-items: center; */
+	margin: 68px 64px;
+	text-align: center;
+	text-transform: uppercase;
+	
+}
+
+/* .service_header:before,
+.service_header:after {
+	content: '';
+	border-top: 1px solid;
+	margin: 0 100px -124px 650px;
+	flex: 1 0 20px;
+}
+
+.service_header:after {
+	margin: -80px 650px 0 100px;
+} */
+
+.upper_service_title {
+	/* flex-basis: 100%; */
+	font-weight: 700;
+	font-size: 56px;
+	margin-bottom: 0;
+	color: #003b41;
+}
+
+.lower_service_title {
+	/* flex-basis: 100%; */
+	font-size: 34px;
+	color: #c74f37;
+}
+
 /* Styling for book appointment button */
 #book_appt_button {
 	background-image: url(/assets/book_appt_button.svg);
@@ -241,7 +279,7 @@ button {
 }
 
 /* Positions the services graphic on the center of the page. */ 
-.services {
+/* .services {
 	width: 518px;
 	height: 851px;
 	margin-right: auto;
@@ -249,7 +287,7 @@ button {
 	display: block;
 	margin-top: 50px !important;
 	margin-bottom: 40px;
-}
+} */
 
 /*=== RESOURCES SECTION ===*/
 
@@ -312,7 +350,6 @@ button {
 #simpleh_button:hover {
 	background-image: url(/assets/simpleh_hover.svg);
 }
-
 
 /* Resources button styling and display */
 #love_button, #additude_button, #isnpr_button,
