--- a/css/pip.css
+++ b/css/pip.css
@@ -41,8 +41,8 @@ h1 {
 /* Global paragraph styling */
 p {
 	font-family: 'Montserrat', sans-serif;
-	font-size: 13px;
-	line-height: 18.3px;
+	font-size: 13.5px;
+	line-height: 20.3px;
 	font-weight: 400;
 }
 
@@ -288,7 +288,7 @@ button {
 
 .appoint_paragraph {
 	font-size: 16px;
-	line-height: 21px;
+	line-height: 23px;
 	width: 250px;
 	max-width: 250px;
 	font-weight: 400;
@@ -328,7 +328,7 @@ button {
 
 .appoint_detail_paragraph {
 	font-size: 16px;
-	line-height: 24px;
+	line-height: 23px;
 	text-align: center;
 	width: 350px;
 	max-width: 350px;
@@ -338,6 +338,12 @@ button {
 .billing_info {
 	text-align: center;
 	margin: 32px 32px;
+}
+
+.big_bold, .bill_phone,
+.bill_paragraph {
+	font-size: 14.5px;
+	line-height: 21.2px;
 }
 
 .big_bold {
@@ -863,6 +869,16 @@ a[href^="tel"] {
 		max-width: 200px !important;
 	}
 	
+	.big_bold, .bill_phone,
+	.bill_paragraph {
+		font-size: 12px !important;
+		line-height: 18px !important;
+	}
+
+	.appointment_details_wrapper {
+		height: 1560px !important;
+	}
+
 	/*=== CONTACT SECTION ===*/
 	
 	/* Fixes contact form paragraph for mobile */
@@ -1238,8 +1254,14 @@ a[href^="tel"] {
 	.appoint_detail_paragraph {
 		width: 300px;
 		max-width: 300px;
-		line-height: 21px;
+		line-height: 23px;
 		padding-top: 2px;
+	}
+
+	.big_bold, .bill_phone,
+	.bill_paragraph {
+		font-size: 13.5px;
+		line-height: 19px;
 	}
 
 	/* Creates gap between button and footer */
@@ -1652,6 +1674,13 @@ a[href^="tel"] {
 
 	.appoint_detail_paragraph {
 		padding-top: 4px;
+		font-size: 15px;
+		line-height: 23px;
+	}
+
+	.appoint_paragraph {
+		font-size: 15px;
+		line-height: 23px;
 	}
 
 	.service_header {
